    ADDED: renaming of just the filename, without extension
    ADDED: full screen terminal window (mc-style)
    ADDED: Inactive panel color dimming (thanks to Heiner)
    ADDED: ActionMan for useraction configuration
    ADDED: single instance mode
    ADDED: start to system tray
    ADDED: right click menu for bookmarks
    ADDED: enable/disable special bookmarks by right clicking on them
    ADDED: keeping the directory structures for virt folders at copy/move
    ADDED: synchronizer, parallel threads for slow FTP servers
    ADDED: an option for directories to be always sorted by name
    ADDED: packing with encryption, multiple volume archives, compress level
    ADDED: krarc, 7z, 7za handling
    ADDED: media button
    ADDED: swap panels / swap sides
    ADDED: synchronizer, threshold for equality, time offset between sides
    ADDED: synchronizer, faster "compare by content" for local files
    ADDED: synchronizer, Feed to listbox
    ADDED: searcher, synchronizer: directory name filters (ex. '* | CVS/')
    ADDED: searcher is able to search content on remote URLs
    ADDED: panel splitter shows the percent values at moving
    ADDED: Copy/Move: preserve all attributes (time, owner, group)
    ADDED: viewer, print + copy actions
    ADDED: new krarc (password handling, type autodetection, writing
           out archiver error messages, step into hidden archives,...)

    --architecture-- refactoring in the useractions, see CVSNEWS

    FIXED: [ 1501740 ] can not link from a search result's virtfs
    FIXED: rare compile problem where exit() isn't defined
    FIXED: [ 1519955 ] wrong permission handling in vfs::vfs_calcSpaceLocal
    FIXED: viewer gives back the focus to the search/locate widgets after ESC
    FIXED: problems with local directory names containing '@' character
    FIXED: security: sometimes the passwords are stored in cleartext in bookmarks.xml
    FIXED: cannot close Krusader when "menubar on top of the screen" is chosen