@@ -1,3 +1,4 @@
+    ADDED: archive packing / unpacking are now in the background
     ADDED: renaming of just the filename, without extension
     ADDED: full screen terminal window (mc-style)
     ADDED: Inactive panel color dimming (thanks to Heiner)
